--- a/style.css
+++ b/style.css
@@ -1,30 +1,40 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 400px
+    width: 400px;
+    border-radius: 5px;
+    padding: 0.25em;
     }
 h1{
     font-size: 3em;
+    background-color:#171F70;
+    text-align: center;
 }
 
 h2{
     font-size: 1.5em;
+    background-color:#171F70;
+    text-align: center;
 }
 
 p{
     color: white; 
     width: 400px;
+    background-color:#89083E;
+    text-align: center;
 }
 
 body { 
-     background-color:#011640;
-     color:#9784D9;
+     background-image: url(https://i.imgur.com/xFWr5c7.jpg);
+     color:#9CC0CC;
     }
 
 a{
     color:#6387F2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5em;
-    width: 400px
+    width: 400px;
+    background-color:#171F70;
+    text-align: center;
 }
 
 nav ul{ 
@@ -32,13 +42,10 @@ nav ul{
     list-style:none;
     display:flex;
     justify-content: flex-start;
-    /flex-direction:column;
-    background-color: #021F59;
+    text-align: center;
 }
 
 nav ul li {
-    background-color:#022873;
-    margin:0.25em;
-    padding:0.25em;
-    width:400px;
+    margin:0.2em;
+    color: white;
 }
