--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 400px;
     border-radius: 5px;
     padding: 0.25em;
+    align-content: center;
     }
 h1{
     font-size: 3em;
@@ -18,7 +18,6 @@ h2{
 
 p{
     color: white; 
-    width: 400px;
     background-color:#89083E;
     text-align: center;
 }
@@ -32,20 +31,25 @@ a{
     color:#6387F2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5em;
-    width: 400px;
     background-color:#171F70;
     text-align: center;
 }
 
 nav ul{ 
-    width: 400px;
     list-style:none;
     display:flex;
-    justify-content: flex-start;
+    justify-content: center;
     text-align: center;
+    background-color:#171F70;
+    margin: none;
+}
+
+img{
+    align: center;
 }
 
 nav ul li {
-    margin:0.2em;
+    margin:0.5em;
     color: white;
+    background-color:#171F70;
 }
