--- a/style.css
+++ b/style.css
@@ -1,29 +1,28 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 5px;
-    padding: 0.25em;
     align-content: center;
     }
 h1{
     font-size: 3em;
-    background-color:#171F70;
     text-align: center;
 }
 
 h2{
-    font-size: 1.5em;
-    background-color:#171F70;
+    font-size: 2.5em;
+    
     text-align: center;
 }
 
-p{
+#text{
     color: white; 
-    background-color:#89083E;
+    font-size: 1.5em;
     text-align: center;
 }
+
 
 body { 
-     background-image: url(https://i.imgur.com/xFWr5c7.jpg);
+     background-image: url(file:///Users/lallabah/Documents/School/intentetstandaarden/website/photos/background.png);
      color:#9CC0CC;
     }
 
@@ -31,7 +30,6 @@ a{
     color:#6387F2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5em;
-    background-color:#171F70;
     text-align: center;
 }
 
@@ -40,16 +38,57 @@ nav ul{
     display:flex;
     justify-content: center;
     text-align: center;
-    background-color:#171F70;
     margin: none;
 }
 
-img{
-    align: center;
+nav li a{
+    color: white;
+    margin: 6em;
+}
+
+nav li a:hover{
+    color: purple;
+}
+
+#woman{
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+
+#woman img{
+    width: 65em;
+    height: 40em;
 }
 
 nav ul li {
     margin:0.5em;
     color: white;
-    background-color:#171F70;
 }
+
+#categories {
+    justify-content: center;
+    display: flex;
+    margin: 0.3em;
+    padding: 1em;
+}
+
+#categories img{
+    width:15em;
+    height:10em;
+}
+
+#categories a img{
+    width:15em;
+    height:10em;
+}
+
+ul{
+    list-style:none;
+    display:flex;
+    justify-content: center;
+    text-align: center;
+    margin: 1em;
+}
+
