pad in css ook goed

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2{
 
 
 body { 
-     background-image: url(file:///Users/lallabah/Documents/School/intentetstandaarden/website/photos/background.png);
+     background-image: url(photos/background.png);
      color:#9CC0CC;
     }
 
