--- a/style.css
+++ b/style.css
@@ -3,20 +3,33 @@
     border-radius: 5px;
     align-content: center;
     }
+
+#logo a img{
+    margin-left: auto;
+    margin-right: auto;
+    width:4em;
+    height: 4em;
+    
+}
+
+header{
+    background-color:rgba(0,0,0,0.5);
+    display:block;
+}
+
 h1{
-    font-size: 4em;
+    font-size: 3em;
     text-align: center;
 }
 
 h2{
-    font-size: 3em;
-    
+    font-size: 2em;
     text-align: center;
 }
 
 p{
     color: white; 
-    font-size: 2.5em;
+    font-size: 1.5em;
     text-align: center;
 }
 
@@ -27,9 +40,8 @@ body {
     }
 
 a{
-    color:white;
+    color:plum;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3em;
     text-align: center;
     text-decoration: none;
 }
@@ -38,33 +50,39 @@ a:hover{
     color: hotpink;
 }
 
-a:visited{
-    color:hotpink;
-}
+/*a:visited{
+    color:
+}*/
 
 
 nav li a{
-    margin: 2.3em;
+    margin:1.5em;
+    color:white;
+    
 }
 
 img{
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    width: 70%;
+    
 }
 
 nav ul li {
-    margin:0.5em;
     color: white;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+
 }
 
 
 a img{
-    width:8.5em;
-    height:6em;
-    justify-content: center;
-    display: flex;
-    margin: 0 30px;
+    height:70%;
+    width:80%;
+    display: block;
 }
 
 ul{
@@ -72,7 +90,13 @@ ul{
     display:flex;
     justify-content: center;
     text-align: center;
-    margin: 1em;
+
 }
 
+
+ nav ul li a{
+     color: white;
+     font-size: 2em;
+
+ }
 
